# recommend

./: README.md  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-05-28-ascend-operator-sequence-extraction.md
docs/superpowers/specs/: 2026-05-28-ascend-operator-sequence-extraction-design.md
examples/: config.factory.example.json  config.tiny_dlrm.json  run_extract.py
src/opseq/: __init__.py  ascend_extractor.py  cache.py  ge_parser.py  ge_reader.py  input_builder.py  ir.py  op_normalizer.py  profiler_attach.py
tests/: test_ascend_extractor.py  test_cache.py  test_ge_parser.py  test_ge_reader.py  test_input_builder.py  test_ir.py  test_op_normalizer.py  test_profiler_attach.py
tests/fixtures/: sample_ge_graph.json  sample_ge_graph.txt  sample_profiler.csv
